<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Jan "KekS" M.
  ~ This library is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU Lesser General Public
  ~ License as published by the Free Software Foundation; either
  ~ version 2.1 of the License, or (at your option) any later version.
  ~ This library is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  ~ Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public
  ~ License along with this library; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
  ~ MA 02110-1301  USA
  -->

<resources>

    <string name="app_name">IndoorNavCl</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start!</string>
    <string name="stop">Stop</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="beacon_buttontext">Beacons</string>
    <string name="sites_buttontext">Sites</string>
    <string name="location_buttontext">Locations</string>
    <string name="add_beacon">Add Beacon manually</string>
    <string name="beacon_uuid">UUID</string>
    <string name="beacon_major">Major</string>
    <string name="beacon_minor">Minor</string>
    <string name="example_beacon_uuid">00000000000000000000000000000000</string>
    <string name="example_beacon_major">0</string>
    <string name="example_beacon_minor">0</string>
    <string name="example_position">-0.0</string>
    <string name="add_site">Add Site manually</string>
    <string name="edit_beacon_label">Edit Beacon</string>
    <string name="move_beacon">Move Beacon</string>
    <string name="replace_beacon">Replace Beacon</string>
    <string name="edit_site_lbl">Edit Site</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="h">h</string>
    <string name="add_location">Add Location manually</string>
    <string name="no_impl">Not implemented yet</string>
</resources>
