<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Jan "KekS" M.
  ~ This library is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU Lesser General Public
  ~ License as published by the Free Software Foundation; either
  ~ version 2.1 of the License, or (at your option) any later version.
  ~ This library is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  ~ Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public
  ~ License along with this library; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
  ~ MA 02110-1301  USA
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3">
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beacon_buttontext"
            android:id="@+id/btnBeacon"
            android:drawableRight="@drawable/ic_beacon_logo"
            android:layout_weight="1"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sites_buttontext"
            android:id="@+id/btnSite"
            android:drawableRight="@drawable/ic_site_logo"
            android:layout_weight="1"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_buttontext"
            android:id="@+id/btnLocation"
            android:drawableRight="@drawable/ic_location_logo"
            android:layout_weight="1"/>
</LinearLayout>