<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Jan "KekS" M.
  ~ This library is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU Lesser General Public
  ~ License as published by the Free Software Foundation; either
  ~ version 2.1 of the License, or (at your option) any later version.
  ~ This library is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  ~ Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public
  ~ License along with this library; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
  ~ MA 02110-1301  USA
  -->

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/beacon_uuid"
                android:id="@+id/beacon_uuid_label"
                android:layout_span="@integer/beacon_uuid_label_colpan"
                android:textSize="@dimen/labelfield_fontsize"
                android:textColor="@color/labelfield_color"
                android:gravity="center|end"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/beacon_uuid_text"
                android:layout_column="1"
                android:layout_span="9"
                android:text="@string/example_beacon_uuid"
                android:textSize="@dimen/editfield_fontsize"
                android:textStyle="bold"
                android:typeface="monospace"
                android:gravity="center_vertical|center|center_horizontal" android:paddingTop="@dimen/tablefield_padding"
                android:paddingBottom="@dimen/tablefield_padding"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/beacon_major"
                android:id="@+id/beacon_major_label"
                android:layout_span="@integer/beacon_major_label_colpan"
                android:textSize="@dimen/labelfield_fontsize"
                android:textColor="@color/labelfield_color"
                android:gravity="center|end"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/beacon_major_text"
                android:layout_column="1"
                android:layout_span="4"
                android:text="@string/example_beacon_major"
                android:textSize="@dimen/editfield_fontsize"
                android:textStyle="bold"
                android:typeface="monospace"
                android:gravity="center_vertical|center|center_horizontal" android:paddingTop="@dimen/tablefield_padding"
                android:paddingBottom="@dimen/tablefield_padding"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/beacon_major"
                android:id="@+id/beacon_minor_label"
                android:layout_column="3"
                android:layout_span="@integer/beacon_minor_label_colpan"
                android:textSize="@dimen/labelfield_fontsize"
                android:textColor="@color/labelfield_color"
                android:gravity="center|end"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/beacon_minor_text"
                android:layout_column="4"
                android:layout_span="4"
                android:text="@string/example_beacon_minor"
                android:textSize="@dimen/editfield_fontsize"
                android:textStyle="bold"
                android:typeface="monospace"
                android:gravity="center_vertical|center|center_horizontal" android:paddingTop="@dimen/tablefield_padding"
                android:paddingBottom="@dimen/tablefield_padding"/>
    </TableRow>
</TableLayout>