<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Jan "KekS" M.
  ~ This library is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU Lesser General Public
  ~ License as published by the Free Software Foundation; either
  ~ version 2.1 of the License, or (at your option) any later version.
  ~ This library is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  ~ Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public
  ~ License along with this library; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
  ~ MA 02110-1301  USA
  -->

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinate_fragment_layout"
    android:focusable="false" >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:id="@+id/textView"
            android:layout_column="1" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/txtX"
            android:ellipsize="none" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y"
            android:id="@+id/textView2"
            android:layout_column="1"
            android:singleLine="false" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/txtY" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z"
            android:id="@+id/textView3"
            android:layout_column="1"
            android:singleLine="false" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/txtZ" />
    </TableRow>
</TableLayout>