<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Jan "KekS" M.
  ~ This library is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU Lesser General Public
  ~ License as published by the Free Software Foundation; either
  ~ version 2.1 of the License, or (at your option) any later version.
  ~ This library is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  ~ Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public
  ~ License along with this library; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
  ~ MA 02110-1301  USA
  -->

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/x"
            android:id="@+id/xLbl"
            android:layout_column="0"
            android:textSize="@dimen/labelfield_fontsize"
            android:textStyle="normal"
            android:textColor="@color/labelfield_color"
            android:gravity="center|end"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/txtX"
            android:layout_column="1"
            android:layout_span="3"
            android:inputType="numberSigned|numberDecimal"
            android:layout_gravity="center"
            android:textSize="@dimen/editfield_fontsize"
            android:textStyle="bold"
            android:typeface="monospace"
            android:clickable="false"
            android:focusable="false"
            android:paddingTop="@dimen/tablefield_padding"
            android:paddingBottom="@dimen/tablefield_padding"
            android:numeric="signed|decimal"
            android:text="@string/example_position"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/y"
            android:id="@+id/yLbl"
            android:layout_column="4"
            android:textSize="@dimen/labelfield_fontsize"
            android:textStyle="normal"
            android:textColor="@color/labelfield_color"
            android:gravity="center|end"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/txtY"
            android:layout_column="5"
            android:layout_span="3"
            android:inputType="numberSigned|numberDecimal"
            android:layout_gravity="center"
            android:textSize="@dimen/editfield_fontsize"
            android:textStyle="bold"
            android:typeface="monospace"
            android:clickable="false"
            android:focusable="false"
            android:paddingTop="@dimen/tablefield_padding"
            android:paddingBottom="@dimen/tablefield_padding"
            android:numeric="signed|decimal"
            android:text="@string/example_position"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/h"
            android:id="@+id/hLbl"
            android:layout_column="8"
            android:textSize="@dimen/labelfield_fontsize"
            android:textStyle="normal"
            android:textColor="@color/labelfield_color"
            android:gravity="center|end"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/txtZ"
            android:layout_column="9"
            android:layout_span="3"
            android:inputType="numberSigned|numberDecimal"
            android:layout_gravity="center"
            android:textSize="@dimen/editfield_fontsize"
            android:textStyle="bold"
            android:typeface="monospace"
            android:clickable="false"
            android:focusable="false"
            android:paddingTop="@dimen/tablefield_padding"
            android:paddingBottom="@dimen/tablefield_padding"
            android:numeric="signed|decimal"
            android:text="@string/example_position"/>
    </TableRow>
</TableLayout>